--- a/eval_test.ipynb
+++ b/eval_test.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from edf.pc_utils import draw_geometry\n",
+    "from edf.pc_utils import draw_geometry, voxel_filter\n",
     "from edf.data import PointCloud, SE3, PickDemo, PlaceDemo, PickAndPlaceDemo, gzip_save, gzip_load\n",
     "\n",
     "import numpy as np\n",
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "demo = PickAndPlaceDemo.from_data(dir=\"demo\", filename=\"demo_test.gzip\")"
+    "demo = PickAndPlaceDemo.from_data(dir=\"demo\", filename=\"demo_test.gzip\", device='cpu')"
    ]
   },
   {
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pcd = demo.pick_demo.scene_pc.to_pcd()"
+    "pc = demo.pick_demo.scene_pc"
    ]
   },
   {
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "draw_geometry(pcd)"
+    "pc_vox = voxel_filter(pc=pc, voxel_size=0.01)"
    ]
   },
   {
@@ -49,7 +49,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pc = PointCloud.from_pcd(pcd)"
+    "# draw_geometry(pc.to_pcd())\n",
+    "draw_geometry(pc_vox.to_pcd())"
    ]
   },
   {
@@ -57,18 +58,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pc.colors"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pc.points.shape"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -94,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16 (default, Jan 17 2023, 23:13:24) \n[GCC 11.2.0]"
+   "version": "3.8.16"
   },
   "vscode": {
    "interpreter": {
