rescale and normalize_color

--- a/eval_test.ipynb
+++ b/eval_test.ipynb
@@ -7,13 +7,16 @@
    "outputs": [],
    "source": [
     "from edf.pc_utils import draw_geometry, voxel_filter\n",
-    "from edf.data import PointCloud, SE3, PickDemo, PlaceDemo, PickAndPlaceDemo, gzip_save, gzip_load\n",
+    "from edf.data import PointCloud, SE3, PickDemo, PlaceDemo, PickAndPlaceDemo\n",
+    "from edf.preprocess import rescale, normalize_color\n",
     "\n",
     "import numpy as np\n",
     "import yaml\n",
     "import plotly as pl\n",
     "import plotly.express as ple\n",
-    "import open3d as o3d"
+    "import open3d as o3d\n",
+    "\n",
+    "import torch"
    ]
   },
   {
@@ -22,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "demo = PickAndPlaceDemo.from_data(dir=\"demo\", filename=\"demo_test.gzip\", device='cpu')"
+    "demo = PickAndPlaceDemo.from_data(dir=\"demo\", filename=\"demo_test.gzip\", device='cuda:0')"
    ]
   },
   {
@@ -31,7 +34,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pc = demo.pick_demo.scene_pc"
+    "demo = rescale(demo, rescale_factor=0.5)\n",
+    "demo = normalize_color(demo, color_mean = torch.tensor([0.5, 0.5, 0.5]), color_std = torch.tensor([0.5, 0.5, 0.5]))"
    ]
   },
   {
@@ -39,7 +43,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
+    "pc = demo.pick_demo.scene_pc\n",
     "pc_vox = voxel_filter(pc=pc, voxel_size=0.01)"
    ]
   },
@@ -52,41 +64,6 @@
     "# draw_geometry(pc.to_pcd())\n",
     "draw_geometry(pc_vox.to_pcd())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
