--- a/eval_test.ipynb
+++ b/eval_test.ipynb
@@ -7,8 +7,8 @@
    "outputs": [],
    "source": [
     "from edf.pc_utils import draw_geometry, voxel_filter\n",
-    "from edf.data import PointCloud, SE3, PickDemo, PlaceDemo, PickAndPlaceDemo\n",
-    "from edf.preprocess import rescale, normalize_color\n",
+    "from edf.data import PointCloud, SE3, PickDemo, PlaceDemo, PickAndPlaceDemo, PickAndPlaceDataset\n",
+    "from edf.preprocess import Rescale, NormalizeColor, Downsample\n",
     "\n",
     "import numpy as np\n",
     "import yaml\n",
@@ -16,7 +16,9 @@
     "import plotly.express as ple\n",
     "import open3d as o3d\n",
     "\n",
-    "import torch"
+    "import torch\n",
+    "from torch.utils.data import DataLoader\n",
+    "from torchvision.transforms import Compose"
    ]
   },
   {
@@ -25,7 +27,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "demo = PickAndPlaceDemo.from_data(dir=\"demo\", filename=\"demo_test.gzip\", device='cuda:0')"
+    "device = 'cuda:0'\n",
+    "unit_len = 0.01"
    ]
   },
   {
@@ -34,8 +37,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "demo = rescale(demo, rescale_factor=0.5)\n",
-    "demo = normalize_color(demo, color_mean = torch.tensor([0.5, 0.5, 0.5]), color_std = torch.tensor([0.5, 0.5, 0.5]))"
+    "transforms = Compose([Downsample(voxel_size=unit_len * 1.0, coord_reduction=\"average\"),\n",
+    "                      Rescale(rescale_factor=1/unit_len),\n",
+    "                      NormalizeColor(color_mean = torch.tensor([0.5, 0.5, 0.5]), color_std = torch.tensor([0.5, 0.5, 0.5])),\n",
+    "                      ])\n",
+    "trainset = PickAndPlaceDataset(dataset_dir=\"demo/test_demo\", dataset_name=\"train\", transforms=transforms)\n",
+    "train_dataloader = DataLoader(trainset, batch_size=1, shuffle=False, num_workers=1, collate_fn=lambda x:x)"
    ]
   },
   {
@@ -43,16 +50,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "pc = demo.pick_demo.scene_pc\n",
-    "pc_vox = voxel_filter(pc=pc, voxel_size=0.01)"
+    "train_demo = next(iter(train_dataloader))[0]"
    ]
   },
   {
@@ -62,8 +61,15 @@
    "outputs": [],
    "source": [
     "# draw_geometry(pc.to_pcd())\n",
-    "draw_geometry(pc_vox.to_pcd())"
+    "draw_geometry(train_demo.pick_demo.scene_pc.to_pcd())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
