--- a/demo_gen_test.ipynb
+++ b/demo_gen_test.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_interface = EdfRosInterface()"
+    "env_interface = EdfRosInterface(pose_reference_frame=\"scene\", pointcloud_frame=\"map\")"
    ]
   },
   {
@@ -56,8 +56,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_poses = np.array([[0.0, 0.0, 1.0, 0.0, -0.25, 0.0, 0.62]])\n",
-    "pick_poses = SE3.from_numpy(orns = target_poses[..., :4], positions = target_poses[..., 4:], versor_last_input = True)"
+    "# target_poses = np.array([[0.0, 0.0, 1.0, 0.0, -0.25, 0.0, 0.62]])\n",
+    "target_poses = np.array([[0.0, 0.0, 1.0, 0.0, -0.25+0.2, 0.0, 0.62-0.345]])\n",
+    "pick_poses = SE3.from_numpy(orns = target_poses[..., :4], positions = target_poses[..., 4:], versor_last_input = False)"
    ]
   },
   {
@@ -87,6 +88,38 @@
    "outputs": [],
    "source": [
     "env_interface.pick(target_poses=target_poses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pos, orn = env_interface.get_frame(\"scene\", \"map\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pos, orn.as_quat()"
    ]
   },
   {
