demo save and load

--- a/demo_gen_test.ipynb
+++ b/demo_gen_test.ipynb
@@ -11,7 +11,7 @@
     "from ros_edf.ros_interface import EdfRosInterface\n",
     "from edf_env.pybullet_pc_utils import pb_cams_to_pc\n",
     "from edf_env.pc_utils import pcd_from_numpy, draw_geometry\n",
-    "from edf.data import PointCloud, SE3, PickDemo, PlaceDemo, PickAndPlaceDemo\n",
+    "from edf.data import PointCloud, SE3, PickDemo, PlaceDemo, PickAndPlaceDemo, save_demos\n",
     "\n",
     "import numpy as np\n",
     "import yaml\n",
@@ -57,7 +57,7 @@
    "outputs": [],
    "source": [
     "# target_poses = np.array([[0.0, 0.0, 1.0, 0.0, -0.25, 0.0, 0.62]])\n",
-    "target_poses = np.array([[0.0, 0.0, 1.0, 0.0, -0.25+0.2, 0.0, 0.62-0.345]])\n",
+    "target_poses = np.array([[0.0, 0.0, 1.0, 0.0, -0.05, 0.0, 0.275]])\n",
     "pick_poses = SE3.from_numpy(orns = target_poses[..., :4], positions = target_poses[..., 4:], versor_last_input = False)"
    ]
   },
@@ -78,15 +78,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "demo.save_data(dir=\"demo\", filename=\"demo_test.gzip\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "env_interface.pick(target_poses=target_poses)"
    ]
   },
@@ -95,39 +86,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "pos, orn = env_interface.get_frame(\"scene\", \"map\")"
+    "save_demos(demos=demos, dir=\"demo/test_demo\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pos, orn.as_quat()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -146,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.16 (default, Jan 17 2023, 23:13:24) \n[GCC 11.2.0]"
   },
   "vscode": {
    "interpreter": {
