--- a/demo_load_test.ipynb
+++ b/demo_load_test.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "from edf.pc_utils import draw_geometry\n",
-    "from edf.data import PointCloud, SE3, PickDemo, PlaceDemo, PickAndPlaceDemo, gzip_save, gzip_load\n",
+    "from edf.data import PointCloud, SE3, PickDemo, PlaceDemo, PickAndPlaceDemo, load_demos\n",
     "\n",
     "import numpy as np\n",
     "import yaml\n",
@@ -22,7 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "demo = PickAndPlaceDemo.from_data(dir=\"demo\", filename=\"demo_test.gzip\")"
+    "demos  = load_demos(\"demo/test_demo/\")\n",
+    "demo: PickAndPlaceDemo = demos[0]"
    ]
   },
   {
@@ -51,31 +52,6 @@
    "source": [
     "pc = PointCloud.from_pcd(pcd)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pc.colors"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pc.points.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
