--- a/eval_test.ipynb
+++ b/eval_test.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
-      "[Open3D INFO] WebRTC GUI backend enabled.\n",
-      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from edf.pc_utils import draw_geometry, voxel_filter\n",
     "from edf.data import PointCloud, SE3, PickDemo, PlaceDemo, PickAndPlaceDemo, PickAndPlaceDataset\n",
@@ -34,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,13 +60,13 @@
     "                      Rescale(rescale_factor=1/unit_len),\n",
     "                      NormalizeColor(color_mean = torch.tensor([0.5, 0.5, 0.5]), color_std = torch.tensor([0.5, 0.5, 0.5])),\n",
     "                      ])\n",
-    "trainset = PickAndPlaceDataset(dataset_dir=\"demo/test_demo\", dataset_name=\"train\", transforms=transforms, device=device)\n",
+    "trainset = PickAndPlaceDataset(dataset_dir=\"demo/test_demo\", annotation_file=\"data.yaml\", transforms=transforms, device=device)\n",
     "train_dataloader = DataLoader(trainset, shuffle=False, collate_fn=lambda x:x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,40 +75,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([ 9.6347, 29.5414, 49.4110], device='cuda:0')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "demo.pick_demo.scene_pc.points.max(dim=0).values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([-49.4785, -29.5414,  34.5485], device='cuda:0')"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "demo.pick_demo.scene_pc.points.min(dim=0).values"
    ]
@@ -162,8 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# draw_geometry(pc.to_pcd())\n",
-    "draw_geometry(train_demo.pick_demo.scene_pc.to_pcd())"
+    "draw_geometry(demo.pick_demo.scene_pc.to_pcd())"
    ]
   },
   {
@@ -190,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.16 (default, Jan 17 2023, 23:13:24) \n[GCC 11.2.0]"
   },
   "vscode": {
    "interpreter": {
