--- a/demo_gen_test.ipynb
+++ b/demo_gen_test.ipynb
@@ -11,7 +11,7 @@
     "from ros_edf.ros_interface import EdfRosInterface\n",
     "from edf_env.pybullet_pc_utils import pb_cams_to_pc\n",
     "from edf_env.pc_utils import pcd_from_numpy, draw_geometry\n",
-    "from edf.data import PointCloud, SE3, PickDemo, PlaceDemo, PickAndPlaceDemo, save_demos\n",
+    "from edf.data import PointCloud, SE3, TargetPoseDemo, DemoSequence, save_demos\n",
     "\n",
     "import numpy as np\n",
     "import yaml\n",
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "demos = []"
+    "dataset = []"
    ]
   },
   {
@@ -67,9 +67,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pick_demo = PickDemo(scene_pc=scene_pc, target_poses=pick_poses)\n",
-    "demo = PickAndPlaceDemo(pick_demo=pick_demo)\n",
-    "demos.append(demo)"
+    "pick_demo = TargetPoseDemo(target_poses=pick_poses, scene_pc=scene_pc, grasp_pc=None)\n",
+    "demo_seq = DemoSequence(demo_seq = [pick_demo])\n",
+    "dataset.append(demo_seq)"
    ]
   },
   {
@@ -87,8 +87,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_demos(demos=demos, dir=\"demo/test_demo\")"
+    "save_demos(demos=dataset, dir=\"demo/test_demo\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
