--- a/demo_load_test.ipynb
+++ b/demo_load_test.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "from edf.pc_utils import draw_geometry\n",
-    "from edf.data import PointCloud, SE3, PickDemo, PlaceDemo, PickAndPlaceDemo, load_demos\n",
+    "from edf.data import PointCloud, SE3, TargetPoseDemo, DemoSequence, load_demos\n",
     "\n",
     "import numpy as np\n",
     "import yaml\n",
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "demos  = load_demos(\"demo/test_demo/\")\n",
-    "demo: PickAndPlaceDemo = demos[0]"
+    "demo_seq: DemoSequence = demos[0]"
    ]
   },
   {
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pcd = demo.pick_demo.scene_pc.to_pcd()"
+    "pcd = demo_seq[0].scene_pc.to_pcd()"
    ]
   },
   {
@@ -42,15 +42,6 @@
    "outputs": [],
    "source": [
     "draw_geometry(pcd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pc = PointCloud.from_pcd(pcd)"
    ]
   }
  ],
@@ -70,7 +61,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16 (default, Jan 17 2023, 23:13:24) \n[GCC 11.2.0]"
+   "version": "3.8.16"
   },
   "vscode": {
    "interpreter": {
