--- a/eval_test.ipynb
+++ b/eval_test.ipynb
@@ -6,8 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "from edf.pc_utils import draw_geometry, voxel_filter\n",
-    "from edf.data import PointCloud, SE3, PickDemo, PlaceDemo, PickAndPlaceDemo, PickAndPlaceDataset\n",
+    "from edf.data import PointCloud, SE3, TargetPoseDemo, DemoSequence, DemoSeqDataset\n",
     "from edf.preprocess import Rescale, NormalizeColor, Downsample\n",
     "from edf.agent import PickAgent\n",
     "\n",
@@ -30,16 +32,10 @@
    "source": [
     "device = 'cuda:0'\n",
     "# device = 'cpu'\n",
-    "unit_len = 0.01"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "unit_len = 0.01\n",
+    "\n",
     "pick_agent_config_dir = \"config/agent_config/pick_agent.yaml\"\n",
+    "pick_agent_param_dir = \"checkpoint/mug_10_demo/pick/model_iter_600.pt\"\n",
     "max_N_query_pick = 1\n",
     "langevin_dt_pick = 0.001\n",
     "\n",
@@ -47,20 +43,15 @@
     "pick_agent = PickAgent(config_dir=pick_agent_config_dir, \n",
     "                       device = device,\n",
     "                       max_N_query = max_N_query_pick, \n",
-    "                       langevin_dt = langevin_dt_pick)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "transforms = Compose([Downsample(voxel_size=unit_len * 1.0, coord_reduction=\"average\"),\n",
-    "                      Rescale(rescale_factor=1/unit_len),\n",
+    "                       langevin_dt = langevin_dt_pick)\n",
+    "pick_agent.load(pick_agent_param_dir)\n",
+    "\n",
+    "load_transforms = Compose([Rescale(rescale_factor=1/unit_len),\n",
+    "                          ])\n",
+    "transforms = Compose([Downsample(voxel_size=1.0, coord_reduction=\"average\"),\n",
     "                      NormalizeColor(color_mean = torch.tensor([0.5, 0.5, 0.5]), color_std = torch.tensor([0.5, 0.5, 0.5])),\n",
-    "                      ])\n",
-    "trainset = PickAndPlaceDataset(dataset_dir=\"demo/test_demo\", annotation_file=\"data.yaml\", transforms=transforms, device=device)\n",
+    "                     ])\n",
+    "trainset = DemoSeqDataset(dataset_dir=\"demo/test_demo\", annotation_file=\"data.yaml\", load_transforms = load_transforms, transforms=transforms, device=device)\n",
     "train_dataloader = DataLoader(trainset, shuffle=False, collate_fn=lambda x:x)"
    ]
   },
@@ -70,7 +61,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "demo = next(iter(train_dataloader))[0]"
+    "demo_seq = next(iter(train_dataloader))[0]\n",
+    "demo_seq_raw: DemoSequence = demo_seq['raw']\n",
+    "demo_seq: DemoSequence = demo_seq['processed']"
    ]
   },
   {
@@ -79,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "demo.pick_demo.scene_pc.points.max(dim=0).values"
+    "pcd_raw = demo_seq_raw[0].scene_pc.to_pcd()"
    ]
   },
   {
@@ -88,8 +81,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "demo.pick_demo.scene_pc.points.min(dim=0).values"
+    "draw_geometry(demo_seq[0].scene_pc.to_pcd())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -129,9 +150,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "draw_geometry(demo.pick_demo.scene_pc.to_pcd())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -157,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16 (default, Jan 17 2023, 23:13:24) \n[GCC 11.2.0]"
+   "version": "3.8.16"
   },
   "vscode": {
    "interpreter": {
