--- a/eval_test.ipynb
+++ b/eval_test.ipynb
@@ -52,6 +52,7 @@
     "                      NormalizeColor(color_mean = torch.tensor([0.5, 0.5, 0.5]), color_std = torch.tensor([0.5, 0.5, 0.5])),\n",
     "                     ])\n",
     "trainset = DemoSeqDataset(dataset_dir=\"demo/test_demo\", annotation_file=\"data.yaml\", load_transforms = load_transforms, transforms=transforms, device=device)\n",
+    "# train_dataloader = DataLoader(trainset, shuffle=False, collate_fn=lambda xs:{'processed': [x['processed'] for x in xs], 'raw': [x['raw'] for x in xs]}) \n",
     "train_dataloader = DataLoader(trainset, shuffle=False, collate_fn=lambda x:x)"
    ]
   },
@@ -61,35 +62,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "demo_seq = next(iter(train_dataloader))[0]\n",
-    "demo_seq_raw: DemoSequence = demo_seq['raw']\n",
-    "demo_seq: DemoSequence = demo_seq['processed']"
+    "for train_batch in train_dataloader:\n",
+    "    for data in train_batch:\n",
+    "        demo_seq_raw: DemoSequence = data['raw']\n",
+    "        demo_seq: DemoSequence = data['processed']\n",
+    "        break\n",
+    "    break"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pcd_raw = demo_seq_raw[0].scene_pc.to_pcd()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "draw_geometry(demo_seq[0].scene_pc.to_pcd())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
