--- a/robot_env_test.ipynb
+++ b/robot_env_test.ipynb
@@ -11,16 +11,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "pybullet build time: Jan 28 2022 20:17:22\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
+     ]
+    }
+   ],
    "source": [
     "import sys, os\n",
+    "\n",
+    "import pybullet as p\n",
     "\n",
     "import edf_env\n",
     "from edf_env.env import UR5Env\n",
     "from edf_env.pybullet_pc_utils import pb_cams_to_pc\n",
     "from edf_env.pc_utils import pcd_from_numpy, draw_geometry\n",
+    "from edf_env.utils import pb_draw_axis\n",
     "\n",
     "import numpy as np\n",
     "import yaml\n",
@@ -31,46 +51,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-1, -1, -1]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "env = UR5Env(use_gui=False)"
+    "env = UR5Env(use_gui=False, debug=True)\n",
+    "pos, orn = env.get_link_pose(link_id=env.end_effector_link_id)\n",
+    "pb_draw_axis(pos=pos, orn=orn, orn_format='quat')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pc_coord, pc_color, pc_seg, cam_data_list = env.observe_scene()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pcd = pcd_from_numpy(coord=pc_coord, color=pc_color, voxel_filter_size = 0.003)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "pc_coord, pc_color, pc_seg, cam_data_list = env.observe_grasp()\n",
+    "pcd = pcd_from_numpy(coord=pc_coord, color=pc_color, voxel_filter_size = 0.003)\n",
     "draw_geometry(pcd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pc_coord, pc_color, pc_seg, cam_data_list = env.observe_scene()\n",
+    "pcd = pcd_from_numpy(coord=pc_coord, color=pc_color, voxel_filter_size = 0.003)\n",
+    "draw_geometry(pcd)"
+   ]
   }
  ],
  "metadata": {
@@ -89,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16 (default, Jan 17 2023, 23:13:24) \n[GCC 11.2.0]"
+   "version": "3.8.16"
   },
   "orig_nbformat": 4,
   "vscode": {
