new demo gen with ee

--- a/demo_gen_test.ipynb
+++ b/demo_gen_test.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_interface = EdfRosInterface(pose_reference_frame=\"scene\", pointcloud_frame=\"map\")"
+    "env_interface = EdfRosInterface(reference_frame = \"scene\")"
    ]
   },
   {
@@ -46,7 +46,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "points, colors = env_interface.observe_scene(obs_type = 'pointcloud', update = False)\n",
+    "points, colors = env_interface.observe_ee(obs_type = 'pointcloud', update = True)\n",
+    "grasp_pc = PointCloud.from_numpy(points=points, colors=colors)\n",
+    "points, colors = env_interface.observe_scene(obs_type = 'pointcloud', update = True)\n",
     "scene_pc = PointCloud.from_numpy(points=points, colors=colors)"
    ]
   },
@@ -67,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pick_demo = TargetPoseDemo(target_poses=pick_poses, scene_pc=scene_pc, grasp_pc=None)\n",
+    "pick_demo = TargetPoseDemo(target_poses=pick_poses, scene_pc=scene_pc, grasp_pc=grasp_pc)\n",
     "demo_seq = DemoSequence(demo_seq = [pick_demo])\n",
     "dataset.append(demo_seq)"
    ]
