--- a/demo_load_test.ipynb
+++ b/demo_load_test.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pcd = demo_seq[0].scene_pc.to_pcd()"
+    "pcd = demo_seq[0].grasp_pc.to_pcd()"
    ]
   },
   {
@@ -43,6 +43,13 @@
    "source": [
     "draw_geometry(pcd)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
