--- a/robot_env_test.ipynb
+++ b/robot_env_test.ipynb
@@ -11,26 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "pybullet build time: Jan 28 2022 20:17:22\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
-      "[Open3D INFO] WebRTC GUI backend enabled.\n",
-      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys, os\n",
     "\n",
@@ -51,20 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[-1, -1, -1]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "env = UR5Env(use_gui=False, debug=True)\n",
     "pos, orn = env.get_link_pose(link_id=env.end_effector_link_id)\n",
@@ -73,18 +45,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pc_coord, pc_color, pc_seg, cam_data_list = env.observe_grasp()\n",
+    "pc_coord, pc_color, pc_seg, cam_data_list = env.observe_ee()\n",
     "pcd = pcd_from_numpy(coord=pc_coord, color=pc_color, voxel_filter_size = 0.003)\n",
     "draw_geometry(pcd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
