buffer loading problem

--- a/pick_eval_test.ipynb
+++ b/pick_eval_test.ipynb
@@ -59,15 +59,8 @@
     "                       device = device,\n",
     "                       max_N_query = max_N_query_pick, \n",
     "                       langevin_dt = langevin_dt_pick)\n",
+    "\n",
     "pick_agent.load(pick_agent_param_dir)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### TODO"
    ]
   },
   {
@@ -77,22 +70,7 @@
    "outputs": [],
    "source": [
     "query_points = torch.tensor([[0.0, 0.0, 15.]])\n",
-    "pick_agent.query_model.query_points = query_points.to(device)\n",
-    "\n",
-    "\n",
-    "pick_agent.metropolis.init_dist.dist_X.ranges = pick_agent.ranges.to(pick_agent.metropolis.init_dist.dist_X.ranges.device)\n",
-    "pick_agent.energy_model.ranges = pick_agent.ranges.to(pick_agent.energy_model.ranges.device)\n",
-    "pick_agent.energy_model_train.ranges = pick_agent.ranges.to(pick_agent.energy_model_train.ranges.device)\n",
-    "pick_agent.langevin.ranges_X = pick_agent.ranges.to(pick_agent.langevin.ranges_X.device)\n",
-    "pick_agent.langevin.init_dist.dist_X.ranges = pick_agent.ranges.to(pick_agent.langevin.init_dist.dist_X.ranges.device)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### TODO END"
+    "pick_agent.query_model.query_points = query_points.to(device)"
    ]
   },
   {
@@ -243,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grasps = grasp_pc_raw.transformed(Ts[:2].to(device))"
+    "grasps = grasp_pc_raw.transformed(Ts[:10].to(device))"
    ]
   },
   {
@@ -296,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16 (default, Jan 17 2023, 23:13:24) \n[GCC 11.2.0]"
+   "version": "3.8.16"
   },
   "vscode": {
    "interpreter": {
