edf pick success

--- a/pick_eval_test.ipynb
+++ b/pick_eval_test.ipynb
@@ -21,7 +21,9 @@
     "\n",
     "import torch\n",
     "from torch.utils.data import DataLoader\n",
-    "from torchvision.transforms import Compose"
+    "from torchvision.transforms import Compose\n",
+    "\n",
+    "torch.set_printoptions(precision= 3, sci_mode=False, linewidth=120)"
    ]
   },
   {
@@ -274,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.16 (default, Jan 17 2023, 23:13:24) \n[GCC 11.2.0]"
   },
   "vscode": {
    "interpreter": {
