--- a/demo_gen_test.ipynb
+++ b/demo_gen_test.ipynb
@@ -17,9 +17,7 @@
     "import yaml\n",
     "import plotly as pl\n",
     "import plotly.express as ple\n",
-    "import open3d as o3d\n",
-    "\n",
-    "import pybullet as p"
+    "import open3d as o3d"
    ]
   },
   {
@@ -58,9 +56,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# target_poses = np.array([[0.0, 0.0, 1.0, 0.0, -0.25, 0.0, 0.62]])\n",
     "target_poses = np.array([[0.0, 0.0, 1.0, 0.0, -0.05, 0.0, 0.275]])\n",
-    "pick_poses = SE3.from_numpy(orns = target_poses[..., :4], positions = target_poses[..., 4:], versor_last_input = False)"
+    "pick_poses = SE3.from_numpy(orns = target_poses[..., :4], positions = target_poses[..., 4:], versor_last_input = False)\n",
+    "result = env_interface.pick(target_poses=target_poses)\n",
+    "\n",
+    "pick_success = result[-1] is not None"
    ]
   },
   {
@@ -69,9 +69,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pick_demo = TargetPoseDemo(target_poses=pick_poses, scene_pc=scene_pc, grasp_pc=grasp_pc)\n",
-    "demo_seq = DemoSequence(demo_seq = [pick_demo])\n",
-    "dataset.append(demo_seq)"
+    "if True: # pick_success:\n",
+    "    pick_demo = TargetPoseDemo(target_poses=pick_poses, scene_pc=scene_pc, grasp_pc=grasp_pc)"
    ]
   },
   {
@@ -80,7 +79,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_interface.pick(target_poses=target_poses)"
+    "points, colors = env_interface.move_and_observe()\n",
+    "grasp_pc = PointCloud.from_numpy(points=points, colors=colors)\n",
+    "points, colors = env_interface.observe_scene(obs_type = 'pointcloud', update = True)\n",
+    "scene_pc = PointCloud.from_numpy(points=points, colors=colors)"
    ]
   },
   {
@@ -89,15 +91,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "target_poses = np.array([[0.0, 0.0, 1.0, 0.0, -0.05, 0.0, 0.275]])\n",
+    "place_poses = SE3.from_numpy(orns = target_poses[..., :4], positions = target_poses[..., 4:], versor_last_input = False)\n",
+    "# result = env_interface.pick(target_poses=target_poses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "place_demo = TargetPoseDemo(target_poses=place_poses, scene_pc=scene_pc, grasp_pc=grasp_pc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "demo_seq = DemoSequence(demo_seq = [pick_demo, place_demo])\n",
+    "dataset.append(demo_seq)\n",
     "save_demos(demos=dataset, dir=\"demo/test_demo\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -116,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16 (default, Jan 17 2023, 23:13:24) \n[GCC 11.2.0]"
+   "version": "3.8.16"
   },
   "vscode": {
    "interpreter": {
