--- a/pick_and_place.ipynb
+++ b/pick_and_place.ipynb
@@ -53,24 +53,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_interface.attach(pcd = grasp_pc.to_pcd())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "env_interface.detach()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "target_poses = np.array([[0.0, 0.0, 1.0, 0.0, -0.05, 0.0, 0.275]])\n",
     "pick_poses = SE3.from_numpy(orns = target_poses[..., :4], positions = target_poses[..., 4:], versor_last_input = False)\n",
     "result = env_interface.pick(target_poses=target_poses)\n",
@@ -106,9 +88,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_poses = np.array([[0.0, 0.0, 1.0, 0.0, -0.05, 0.0, 0.275]])\n",
+    "env_interface.attach(pcd = grasp_pc.to_pcd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_poses = np.array([[0.0, 0.0, 1.0, 0.0, -0.05, 0.0, 0.25]])\n",
     "place_poses = SE3.from_numpy(orns = target_poses[..., :4], positions = target_poses[..., 4:], versor_last_input = False)\n",
-    "# result = env_interface.pick(target_poses=target_poses)"
+    "pre_grasp_results, grasp_pose = env_interface.move_to_target_pose(poses = target_poses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_poses = np.array([[0.0, 0.0, 1.0, 0.0, -0.05, 0.0, 0.3]])\n",
+    "place_poses = SE3.from_numpy(orns = target_poses[..., :4], positions = target_poses[..., 4:], versor_last_input = False)\n",
+    "pre_grasp_results, grasp_pose = env_interface.move_to_target_pose(poses = target_poses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env_interface.detach()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env_interface.release()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_poses = np.array([[0.0, 0.0, 1.0, 0.0, -0.05, 0.0, 0.6]])\n",
+    "place_poses = SE3.from_numpy(orns = target_poses[..., :4], positions = target_poses[..., 4:], versor_last_input = False)\n",
+    "pre_grasp_results, grasp_pose = env_interface.move_to_target_pose(poses = target_poses)"
    ]
   },
   {
@@ -118,6 +149,18 @@
    "outputs": [],
    "source": [
     "place_demo = TargetPoseDemo(target_poses=place_poses, scene_pc=scene_pc, grasp_pc=grasp_pc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "points, colors = env_interface.observe_eef(obs_type = 'pointcloud', update = True)\n",
+    "grasp_pc = PointCloud.from_numpy(points=points, colors=colors)\n",
+    "points, colors = env_interface.observe_scene(obs_type = 'pointcloud', update = True)\n",
+    "scene_pc = PointCloud.from_numpy(points=points, colors=colors)"
    ]
   },
   {
@@ -148,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.16 (default, Jan 17 2023, 23:13:24) \n[GCC 11.2.0]"
   },
   "vscode": {
    "interpreter": {
