--- a/pick_and_place.ipynb
+++ b/pick_and_place.ipynb
@@ -10,11 +10,19 @@
     "from edf.pc_utils import pcd_from_numpy, draw_geometry, reconstruct_surface\n",
     "from edf.data import PointCloud, SE3, TargetPoseDemo, DemoSequence, save_demos\n",
     "\n",
+    "import torch\n",
     "import numpy as np\n",
     "import yaml\n",
     "import plotly as pl\n",
     "import plotly.express as ple\n",
     "import open3d as o3d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Initialize EDF ROS Interface"
    ]
   },
   {
@@ -27,6 +35,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Initialize dataset list"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -36,15 +51,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "points, colors = env_interface.observe_eef(obs_type = 'pointcloud', update = True)\n",
-    "grasp_pc = PointCloud.from_numpy(points=points, colors=colors)\n",
-    "points, colors = env_interface.observe_scene(obs_type = 'pointcloud', update = True)\n",
-    "scene_pc = PointCloud.from_numpy(points=points, colors=colors)"
+    "### Observe Point clouds"
    ]
   },
   {
@@ -53,8 +63,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_poses = np.array([[0.0, 0.0, 1.0, 0.0, -0.05, 0.0, 0.275]])\n",
-    "pick_poses = SE3.from_numpy(orns = target_poses[..., :4], positions = target_poses[..., 4:], versor_last_input = False)\n",
+    "grasp_pc = env_interface.observe_eef(obs_type = 'pointcloud', update = True)\n",
+    "scene_pc = env_interface.observe_scene(obs_type = 'pointcloud', update = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pick"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_poses = SE3([0.0, 0.0, 1.0, 0.0, -0.05, 0.0, 0.275])\n",
     "result = env_interface.pick(target_poses=target_poses)\n",
     "\n",
     "pick_success = result[-1] is not None"
@@ -67,7 +93,14 @@
    "outputs": [],
    "source": [
     "if True: # pick_success:\n",
-    "    pick_demo = TargetPoseDemo(target_poses=pick_poses, scene_pc=scene_pc, grasp_pc=grasp_pc)"
+    "    pick_demo = TargetPoseDemo(target_poses=target_poses, scene_pc=scene_pc, grasp_pc=grasp_pc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Move to observe gripper"
    ]
   },
   {
@@ -76,10 +109,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "points, colors = env_interface.move_and_observe()\n",
-    "grasp_pc = PointCloud.from_numpy(points=points, colors=colors)\n",
-    "points, colors = env_interface.observe_scene(obs_type = 'pointcloud', update = True)\n",
-    "scene_pc = PointCloud.from_numpy(points=points, colors=colors)"
+    "grasp_pc = env_interface.observe_eef(obs_type = 'pointcloud', update = True)\n",
+    "env_interface.attach(pcd = grasp_pc)"
    ]
   },
   {
@@ -88,7 +119,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_interface.attach(pcd = grasp_pc.to_pcd())"
+    "env_interface.move_to_target_pose(poses = SE3([0.0, 0.0, 1.0, 0.0, 0.00, 0.0, 0.6]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Observe gripper"
    ]
   },
   {
@@ -97,8 +135,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_poses = np.array([[0.0, 0.0, 1.0, 0.0, -0.05, 0.0, 0.25]])\n",
-    "place_poses = SE3.from_numpy(orns = target_poses[..., :4], positions = target_poses[..., 4:], versor_last_input = False)\n",
+    "env_interface.detach()\n",
+    "grasp_pc = env_interface.observe_eef(obs_type = 'pointcloud', update = True)\n",
+    "env_interface.attach(pcd = grasp_pc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Observe Scene"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env_interface.move_to_target_pose(SE3([0.0, 0.0, 1.0, 0.0, -0.4, 0.4, 0.6]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scene_pc = env_interface.observe_scene(obs_type = 'pointcloud', update = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Place"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_poses = SE3([0.0, 0.0, 1.0, 0.0, -0.05, 0.0, 0.35])\n",
     "pre_grasp_results, grasp_pose = env_interface.move_to_target_pose(poses = target_poses)"
    ]
   },
@@ -108,26 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_poses = np.array([[0.0, 0.0, 1.0, 0.0, -0.05, 0.0, 0.3]])\n",
-    "place_poses = SE3.from_numpy(orns = target_poses[..., :4], positions = target_poses[..., 4:], versor_last_input = False)\n",
-    "pre_grasp_results, grasp_pose = env_interface.move_to_target_pose(poses = target_poses)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "env_interface.detach()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "env_interface.detach()\n",
     "env_interface.release()"
    ]
   },
@@ -137,30 +198,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_poses = np.array([[0.0, 0.0, 1.0, 0.0, -0.05, 0.0, 0.6]])\n",
-    "place_poses = SE3.from_numpy(orns = target_poses[..., :4], positions = target_poses[..., 4:], versor_last_input = False)\n",
-    "pre_grasp_results, grasp_pose = env_interface.move_to_target_pose(poses = target_poses)"
+    "place_demo = TargetPoseDemo(target_poses=target_poses, scene_pc=scene_pc, grasp_pc=grasp_pc)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "place_demo = TargetPoseDemo(target_poses=place_poses, scene_pc=scene_pc, grasp_pc=grasp_pc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "points, colors = env_interface.observe_eef(obs_type = 'pointcloud', update = True)\n",
-    "grasp_pc = PointCloud.from_numpy(points=points, colors=colors)\n",
-    "points, colors = env_interface.observe_scene(obs_type = 'pointcloud', update = True)\n",
-    "scene_pc = PointCloud.from_numpy(points=points, colors=colors)"
+    "### Save"
    ]
   },
   {
@@ -191,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16 (default, Jan 17 2023, 23:13:24) \n[GCC 11.2.0]"
+   "version": "3.8.16"
   },
   "vscode": {
    "interpreter": {
