--- a/pick_and_place.ipynb
+++ b/pick_and_place.ipynb
@@ -31,7 +31,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_interface = EdfRosInterface(reference_frame = \"scene\")"
+    "env_interface = EdfRosInterface(reference_frame = \"scene\")\n",
+    "env_interface.reset()\n",
+    "env_interface.moveit_interface.arm_group.set_planning_time(seconds=5)"
    ]
   },
   {
@@ -166,6 +168,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env_interface.move_to_target_pose(poses = SE3([0.0, 0.0, 1.0, 0.0, 0.00, 0.0, 0.6]))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -178,8 +189,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_poses = SE3([0.0, 0.0, 1.0, 0.0, -0.05, 0.0, 0.35])\n",
-    "pre_grasp_results, grasp_pose = env_interface.move_to_target_pose(poses = target_poses)"
+    "# from pytorch3d.transforms import quaternion_multiply, axis_angle_to_quaternion\n",
+    "# quaternion_multiply(axis_angle_to_quaternion(torch.tensor([0,1,0])*-np.pi/2), torch.tensor([np.sqrt(1/2), -np.sqrt(1/2), 0.0, 0.0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# target_poses = SE3([0.0, 0.0, 1.0, 0.0, -0.05, 0.0, 0.35])\n",
+    "target_poses = SE3([0.5000, -0.5000, -0.5000, -0.5000, 0.12, -0.18, 0.32])\n",
+    "env_interface.move_to_target_pose(poses = target_poses)"
    ]
   },
   {
