--- a/pick_and_place.ipynb
+++ b/pick_and_place.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "from ros_edf.ros_interface import EdfRosInterface\n",
-    "from edf.pc_utils import pcd_from_numpy, draw_geometry, reconstruct_surface\n",
+    "from ros_edf.pc_utils import pcd_from_numpy, draw_geometry, reconstruct_surface\n",
     "from edf.data import PointCloud, SE3, TargetPoseDemo, DemoSequence, save_demos\n",
     "\n",
     "import torch\n",
@@ -62,7 +62,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "grasp_pc = env_interface.observe_eef(obs_type = 'pointcloud', update = True)\n",
@@ -177,6 +179,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env_interface.moveit_interface.arm_group.set_goal_joint_tolerance(value=0.01) \n",
+    "env_interface.moveit_interface.arm_group.set_goal_position_tolerance(value=0.001) \n",
+    "env_interface.moveit_interface.arm_group.set_goal_orientation_tolerance(value=0.01) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -201,7 +235,7 @@
    "source": [
     "# target_poses = SE3([0.0, 0.0, 1.0, 0.0, -0.05, 0.0, 0.35])\n",
     "target_poses = SE3([0.5000, -0.5000, -0.5000, -0.5000, 0.12, -0.18, 0.32])\n",
-    "env_interface.move_to_target_pose(poses = target_poses)"
+    "results, result_pose = env_interface.move_to_target_pose(poses = target_poses)"
    ]
   },
   {
@@ -210,6 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "assert results[-1] is True\n",
     "env_interface.detach()\n",
     "env_interface.release()"
    ]
