pre_place pose generation success!

--- a/pcd_opt_test.ipynb
+++ b/pcd_opt_test.ipynb
@@ -46,8 +46,7 @@
     "scene_pc: PointCloud = demo_seq[1].scene_pc\n",
     "grasp_pc: PointCloud = demo_seq[1].grasp_pc\n",
     "target_poses: SE3 = demo_seq[1].target_poses\n",
-    "target_poses.poses[0,-1] = 0.30\n",
-    "grasp_pc = grasp_pc.transformed(target_poses)[0]"
+    "target_poses.poses[0,-1] = 0.30"
    ]
   },
   {
@@ -56,7 +55,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grasp_pc, Ts = optimize_pcd_collision(x=scene_pc, y=grasp_pc, cutoff_r = 0.03, dt=0.01, eps=1., iters=5)"
+    "_, Ts = optimize_pcd_collision(x=scene_pc, y=grasp_pc, cutoff_r = 0.03, dt=0.01, eps=1., iters=5, rel_pose=target_poses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "draw_geometry([scene_pc, grasp_pc.transformed(Ts)[0]])"
    ]
   }
  ],
